Added policy based network restriction manager.
The network restriction manager uses network
policies for granting or restricting an app.
It is also capable of restricting internet
access of new installed apps.

Changes for ten:
 * migrate to androidx (sam)
 * using settings injection (sam)
 * hide system components (sam)
 * hide apps that don't have internet permission (luca)
 * change app list item onClick to point to data restriction
   settings (stefano)

Changes for eleven:
 * added optional columns for data saver and background data (stefano)
 * added column for turning on/off all network access per app (stefano)
 * make vpn an optional column (stefano)
 * "block new apps" now uses a broadcast receiver (stefano)

Changes for twelve:
 * port to restricted networking mode (uldiniad, cdesai)

Make the code properly compile
 * convert missing androidx references for type compatibility (mse1969)

Change-Id: Iad662fbe67f2f8bc5c4d872b0a780321e1dbfd95

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -37,6 +37,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.READ_SEARCH_INDEXABLES" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.NETWORK_SETTINGS" />
 
     <uses-permission android:name="lineageos.permission.MANAGE_REMOTE_PREFERENCES" />
 
@@ -204,6 +206,34 @@
                 android:name="com.android.settings.summary"
                 android:resource="@string/summary_empty" />
         </activity-alias>
+
+        <!-- Network Restriction Manager (Wireless category) -->
+        <activity-alias
+            android:name=".networkrestriction.NetworkRestrictionPreferences"
+            android:label="@string/network_restriction_manager_settings_title"
+            android:targetActivity="PartsActivity">
+            <intent-filter>
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
+                <action android:name="org.lineageos.lineageparts.NETWORK_RESTRICTION_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.wireless" />
+            <meta-data
+                android:name="com.android.settings.order"
+                android:value="1" />
+            <meta-data
+                android:name="com.android.settings.summary"
+                android:resource="@string/summary_empty" />
+        </activity-alias>
+
+        <receiver android:name=".networkrestriction.AppInstalledReceiver" android:enabled="true">
+            <intent-filter android:priority="2147483647">
+                <action android:name="android.intent.action.PACKAGE_ADDED" />
+                <data android:scheme="package" />
+            </intent-filter>
+        </receiver>
 
         <!-- Contributors Cloud (MyDeviceInfo category) -->
         <activity-alias
