Settings: Relocate Network restriction manager to Privacy dashboard
It in fact fits better here as a privacy setting.
(Further, in network settings, all items have an assigned icon, which is
not possible for hooked-in LineageParts objects...)

Change-Id: I9b5f92fdd5391c4caa6b9d20cd7567d90a6eb265

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -219,7 +219,7 @@
             </intent-filter>
             <meta-data
                 android:name="com.android.settings.category"
-                android:value="com.android.settings.category.ia.wireless" />
+                android:value="com.android.settings.category.ia.privacy" />
             <meta-data
                 android:name="com.android.settings.order"
                 android:value="1" />
